--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_apiKey= AIzaSyBWCtl_8K8uF70Lz_8LTqFJgYAQAaD5Zus
+REACT_APP_apiKey=AIzaSyBWCtl_8K8uF70Lz_8LTqFJgYAQAaD5Zus
 REACT_APP_authDomain=fire-blog-project.firebaseapp.com
 REACT_APP_databaseURL=https://fire-blog-project-default-rtdb.firebaseio.com
 REACT_APP_projectId=fire-blog-project
 REACT_APP_storageBucket=fire-blog-project.appspot.com
 REACT_APP_messagingSenderId=849184706930
-REACT_APP_appId=1:1:849184706930:web:38faf3427d348d9b434deb
+REACT_APP_appId=1:849184706930:web:38faf3427d348d9b434deb
